--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -586,7 +586,9 @@ body {
 		align-items: flex-start;
 		justify-content: flex-end;
 		min-height: 350px;
+		min-width: 240px;
 		max-width: 275px;
+		width: 100%;
 		overflow: hidden;
 		border-radius: 5px;
 		box-shadow: 0 0px 5px var(--black);
@@ -626,7 +628,11 @@ body {
 			z-index: 5;
 		}
 		&-bottom {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
 			padding: 0.5em;
+			width: 100%;
 			color: var(--navy);
 			background-color: var(--white);
 			z-index: 10;
@@ -634,6 +640,7 @@ body {
 			opacity: 0;
 			visibility: hidden;
 			transition: opacity 0.3s, transform 0.5s;
+			min-height: 100px;
 		}
 		&-title {
 			font-size: 1.9rem;
@@ -677,7 +684,6 @@ body {
 	&__boxes {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
 		justify-content: center;
 		&-calendar {
 			margin-bottom: 1.3em;
@@ -689,8 +695,6 @@ body {
 	&__box {
 		display: flex;
 		flex-direction: column;
-		align-items: flex-start;
-
 		&-card {
 			display: flex;
 			align-items: stretch;
@@ -720,11 +724,11 @@ body {
 			transition: background-color 0.3s, color 0.3s;
 		}
 		&-text {
-			color: var(--navy);
-			margin: auto;
 			padding: 0.5em;
+			align-self: center;
+			width: 100%;
+			color: var(--navy);
 			transition: color 0.3s;
-			// width: 100%;
 		}
 	}
 	&__btn {
@@ -1714,8 +1718,15 @@ body {
 		}
 	}
 	.events {
-		&__box {
+		&__boxes {
 			flex-direction: row;
+		}
+		&__box {
+			display: grid;
+			grid-template-columns: 1fr;
+			grid-template-rows: repeat(3, 1fr);
+			grid-column-gap: 0px;
+			grid-row-gap: 0px;
 			&-card {
 				margin: 0.4em 0.7em 0.4em 0;
 			}
