--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -958,6 +958,72 @@ body {
 		width: 100%;
 	}
 }
+//structure - members
+.structure {
+	&__box {
+		&--members {
+			width: 100%;
+		}
+	}
+	&__member {
+		padding: 0.3em;
+		margin-bottom: 1em;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-bottom: 2px solid var(--red);
+		background-color: var(--white);
+		&-photo {
+			// padding: 0.5em;
+			width: 80px;
+			// height: 120px;
+			border-radius: 50%;
+			border: 1px solid var(--darkred);
+			object-fit: contain;
+			background-color: var(--white);
+		}
+		&:nth-child(even) &-photo {
+			order: 1;
+		}
+		&-flag {
+			margin-right: 0.5em;
+			width: 25px;
+			height: 25px;
+			object-fit: cover;
+			border-radius: 50%;
+		}
+		&-info {
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+		}
+		&-country {
+			margin: 0 0.3em;
+			padding: 0.4em;
+			display: flex;
+			align-items: center;
+			background-color: var(--white);
+		}
+		&-title {
+			margin: 0 0.3em;
+			padding: 0.4em;
+			color: var(--red);
+			border-bottom: 1px solid var(--gray);
+			background-color: var(--white);
+			font-weight: 700;
+		}
+		&-name {
+			margin: 0 0.3em;
+			padding: 0.4em;
+			border-bottom: 1px solid var(--gray);
+			background-color: var(--white);
+			color: var(--blue);
+		}
+		&-nation {
+			color: var(--navy);
+		}
+	}
+}
 //anti-doping
 .anti-doping {
 	position: relative;
@@ -1960,6 +2026,13 @@ body {
 			}
 		}
 	}
+	.structure {
+		&__box {
+			&--members {
+				width: 50%;
+			}
+		}
+	}
 	.commissions,
 	.officials {
 		&__box {
@@ -2153,6 +2226,13 @@ body {
 			}
 			&-text {
 				font-size: 2.5rem;
+			}
+		}
+	}
+	.structure {
+		&__box {
+			&--members {
+				width: 40%;
 			}
 		}
 	}
