--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1604,6 +1604,27 @@ body {
 		}
 	}
 }
+//partners
+.partners {
+	position: relative;
+	.section-title {
+		border-bottom: 2px solid var(--darkred);
+	}
+	&__boxes {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+	}
+	&__link {
+		margin: 0 0 1em 0;
+	}
+	&__img {
+		width: 130px;
+		height: 100%;
+		object-fit: contain;
+	}
+}
 //footer
 .footer {
 	background-color: var(--black);
@@ -1695,6 +1716,16 @@ body {
 			}
 			&--tiktok {
 				color: #ff0050;
+			}
+		}
+	}
+	&__partners {
+		&-desktop {
+			display: none;
+			&-img {
+				width: 120px;
+				height: 50px;
+				object-fit: contain;
 			}
 		}
 	}
@@ -1929,6 +1960,21 @@ body {
 		}
 		&__link {
 			font-size: 1.8rem;
+		}
+	}
+	.partners {
+		&__boxes {
+			justify-content: flex-start;
+			flex-wrap: wrap;
+			flex-direction: row;
+			align-items: center;
+		}
+		&__link {
+			margin: 1em;
+		}
+		&__img {
+			width: 150px;
+			height: 100%;
 		}
 	}
 	.footer {
@@ -2189,6 +2235,17 @@ body {
 			}
 			&-link {
 				font-size: 1.8rem;
+			}
+		}
+		&__partners {
+			&-desktop {
+				margin-top: 1.5em;
+				display: flex;
+				flex-direction: row;
+				align-items: flex-start;
+				&-link {
+					margin-right: 3em;
+				}
 			}
 		}
 	}
